--- a/spotify_demo/src/App.css
+++ b/spotify_demo/src/App.css
@@ -9,12 +9,17 @@
     background-color: #121212;
     color: rgb(255, 255, 255);
     font-family: sans-serif;
-    min-height: 100vh;
+    height: 100vh;
+    overflow: auto;
+    width: calc(100% - 225px);
+    margin-left: auto;
 
 
 }
 
 .home {
-    flex: 1;
+    overflow: auto;
+    height: calc(100% - 96px);
+
     /* background-color: green; */
 }
